# thread_pool

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  clang-tidy.yml  coverall.yml  coverity_scan.yml
include/thread_pool/: JoinThreads.hpp  TaskWrapper.hpp  ThreadPool.hpp
scripts/: CMakeLists.txt  run_clang_format.sh
test/: Makefile  ThreadPoolTest.cpp
tests/: CMakeLists.txt  ThreadPoolTest.cpp
thread_pool/: FunctionWrapper.hpp  JoinThreads.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp
thread_pool/include/thread_pool/: FunctionWrapper.hpp  TaskWrapper.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp
